# django-chromepdf

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  manage.py  pyproject.toml  setup.cfg  setup.py
chromepdf/: __init__.py  __main__.py  conf.py  exceptions.py  maker.py  pdfconf.py  run.py  shortcuts.py  sizes.py  webdrivercommands.py  webdrivermakers.py  webdrivers.py
chromepdf/chromedrivers/: blank.txt
chromepdf/chromesession/: blank.txt
chromepdf/chromesession/users/: blank.txt
testapp/: .pylintrc  coverage.txt  requirements.txt  settings.py
testapp/githooks/: pre-commit  pre_commit.py
testapp/tests/: test_chromedriver.py  test_clean_pdf_kwargs.py  test_generate_pdf.py  test_generate_pdf_stress.py  test_pdf_creation.py  test_pypi.py  test_run.py  test_settings_overrides.py  test_sizes.py  test_version.py  test_webdriver_makers.py  test_webdrivers.py  test_without_django.py  utils.py
testapp/tests/generate/: test_generate_pdf.py  test_without_django.py  test_without_selenium.py
